<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.MovieDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapse"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:contentScrim="@color/colorPrimary"
            app:titleEnabled="false">

            <ImageView
                android:id="@+id/movie_detail_backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:contentDescription="@string/backdrop_movie"
                tools:src="@drawable/alita" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_detail_movie"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"
                android:layout_gravity="top" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="7dp"
            android:clipToPadding="true"
            android:layout_margin="16dp"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="16dp">

                <TextView
                    android:id="@+id/movie_detail_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="8dp"
                    android:paddingHorizontal="8dp"
                    tools:text="Alita Battle angel"
                    android:background="@color/colorAccent"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textColor="@color/cardview_light_background" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginVertical="8dp"
                    android:paddingHorizontal="16dp">

                    <com.github.florent37.shapeofview.shapes.RoundRectView
                        android:id="@+id/round"
                        android:layout_width="100dp"
                        android:layout_height="150dp"
                        android:elevation="4dp"
                        app:shape_roundRect_bottomLeftRadius="10dp"
                        app:shape_roundRect_bottomRightRadius="10dp"
                        app:shape_roundRect_topLeftRadius="10dp"
                        app:shape_roundRect_topRightRadius="10dp"
                        android:layout_marginLeft="16dp">


                        <ImageView
                            android:id="@+id/movie_detail_poster"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/poster_movie"
                            android:scaleType="centerCrop"
                            tools:src="@drawable/alita" />

                    </com.github.florent37.shapeofview.shapes.RoundRectView>

                    <LinearLayout
                        android:id="@+id/release"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_toEndOf="@id/round"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="22dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/release_date"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/movie_detail_release"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="10-10-2019"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:layout_marginLeft="4dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/vote"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_toEndOf="@id/round"
                        android:layout_marginLeft="16dp"
                        android:layout_below="@id/release"
                        android:layout_marginTop="8dp">

                        <ImageView
                            android:id="@+id/star"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/star" />

                        <TextView
                            android:id="@+id/movie_detail_rating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="10"
                            android:layout_marginLeft="4dp"
                            android:textStyle="bold"
                            android:textSize="14sp" />
                    </LinearLayout>


                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorDivider"
                    android:layout_marginHorizontal="22dp"
                    android:layout_marginTop="8dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/overview"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/movie_detail_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    tools:text="Overview" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/movie_detail_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>