<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_movies"
        android:icon="@drawable/ic_movies"
        android:title="@string/movies" />

    <item
        android:id="@+id/navigation_tvshow"
        android:icon="@drawable/ic_tvshow"
        android:title="@string/tv_show" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorite" />

</menu>
